added styling for calucaltor, js time

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -18,7 +18,7 @@
             <div class="current-operand"></div>
         </div>
         <button class="span-two">AC</button>
-        <button>Delete</button>
+        <button>DEL</button>
         <button>/</button>
         <button>1</button>
         <button>2</button>
